--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^5.0.1",
     "react-particles": "2.10.1",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-tsparticles": "2.10.1",
     "tailwind-scrollbar": "^3.1.0",
     "tsparticles": "2.10.1",
