--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "ag-grid-react": "^31.2.0",
+    "framer-motion": "^11.0.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -14,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "react-tsparticles": "2.10.1",
+    "swiper": "^11.1.0",
     "tailwind-scrollbar": "^3.1.0",
     "tsparticles": "2.10.1",
     "web-vitals": "^2.1.0"
