--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "framer-motion": "^11.0.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-particles": "2.10.1",
     "react-scripts": "5.0.1",
